src/compiler/frontend/parser.c
//  Orus Language Project
//  ---------------------------------------------------------------------------
//  File: src/compiler/frontend/parser.c
//  Author: Jordy Orel KONDA
//  Copyright (c) 2022 Jordy Orel KONDA
//  License: MIT License (see LICENSE file in the project root)
//  Description: Implements the recursive-descent parser that produces AST structures from tokens.
//  

// Orus Language Compiler - Parser Implementation


#include "compiler/parser.h"
#include "public/common.h"
#include "vm/vm.h"
#include "vm/vm_string_ops.h"
#include "internal/error_reporting.h"
#include "errors/features/variable_errors.h"
#include "errors/features/control_flow_errors.h"
#include <stdlib.h>
#include <string.h>
#include <stdint.h>
#include <limits.h>
#include <stdio.h>
#include <ctype.h>



// Parser recursion depth tracking
#define MAX_RECURSION_DEPTH 1000
#define PARSER_ARENA_SIZE (1 << 16)  // 64KB

// Temporary name counter for destructuring transformations
static int tuple_temp_counter = 0;

#define PREC_MUL_DIV_MOD 4
#define PREC_ADD_SUB 3
#define PREC_CAST 2
#define PREC_COMPARISON 2
#define PREC_AND 1
#define PREC_OR 0
#define PREC_NONE -1

static void arena_init(Arena* a, size_t initial) {
    a->head = malloc(sizeof(ArenaBlock));
    a->head->buffer = malloc(initial);
    a->head->capacity = initial;
    a->head->used = 0;
    a->head->next = NULL;
}

static void* parser_arena_alloc(ParserContext* ctx, size_t size) {
    Arena* a = &ctx->arena;
    ArenaBlock* block = a->head;
    if (block->used + size > block->capacity) {
        size_t newCap = block->capacity * 2;
        if (newCap < size) newCap = size;
        ArenaBlock* newBlock = malloc(sizeof(ArenaBlock));
        newBlock->buffer = malloc(newCap);
        newBlock->capacity = newCap;
        newBlock->used = 0;
        newBlock->next = block;
        a->head = newBlock;
        block = newBlock;
    }
    void* ptr = block->buffer + block->used;
    block->used += size;
    return ptr;
}

static void parser_arena_reset(ParserContext* ctx) {
    Arena* a = &ctx->arena;
    ArenaBlock* block = a->head->next;
    while (block) {
        ArenaBlock* next = block->next;
        free(block->buffer);
        free(block);
        block = next;
    }
    a->head->used = 0;
    a->head->next = NULL;
}

static void parser_enter_loop(ParserContext* ctx) {
    control_flow_enter_loop_context();
    if (ctx) {
        ctx->loop_depth++;
    }
}

static void parser_leave_loop(ParserContext* ctx) {
    control_flow_leave_loop_context();
    if (ctx && ctx->loop_depth > 0) {
        ctx->loop_depth--;
    }
}

static ASTNode* new_node(ParserContext* ctx) { return parser_arena_alloc(ctx, sizeof(ASTNode)); }

static void addStatement(ParserContext* ctx, ASTNode*** list, int* count, int* capacity, ASTNode* stmt) {
    if (*count + 1 > *capacity) {
        int newCap = *capacity == 0 ? 4 : (*capacity * 2);
        ASTNode** newArr = parser_arena_alloc(ctx, sizeof(ASTNode*) * newCap);
        if (*capacity > 0) {
            memcpy(newArr, *list, sizeof(ASTNode*) * (*count));
        }
        *list = newArr;
        *capacity = newCap;
    }
    (*list)[(*count)++] = stmt;
}

static void add_enum_variant(ParserContext* ctx, EnumVariant** list, int* count, int* capacity, EnumVariant variant) {
    if (*count + 1 > *capacity) {
        int newCap = *capacity == 0 ? 4 : (*capacity * 2);
        EnumVariant* newArr = parser_arena_alloc(ctx, sizeof(EnumVariant) * newCap);
        if (*capacity > 0) {
            memcpy(newArr, *list, sizeof(EnumVariant) * (*count));
        }
        *list = newArr;
        *capacity = newCap;
    }
    (*list)[(*count)++] = variant;
}

static Token peekToken(ParserContext* ctx);
static Token nextToken(ParserContext* ctx);
static char* copy_token_text(ParserContext* ctx, Token token);
static bool report_reserved_keyword_identifier(ParserContext* ctx, Token token, const char* context);

static bool is_reserved_keyword_token(TokenType type) {
    switch (type) {
        case TOKEN_AND:
        case TOKEN_BREAK:
        case TOKEN_CONTINUE:
        case TOKEN_PASS:
        case TOKEN_ELSE:
        case TOKEN_ELIF:
        case TOKEN_FOR:
        case TOKEN_FN:
        case TOKEN_IF:
        case TOKEN_OR:
        case TOKEN_NOT:
        case TOKEN_PRINT:
        case TOKEN_RETURN:
        case TOKEN_MUT:
        case TOKEN_WHILE:
        case TOKEN_TRY:
        case TOKEN_CATCH:
        case TOKEN_IN:
        case TOKEN_STRUCT:
        case TOKEN_ENUM:
        case TOKEN_IMPL:
        case TOKEN_IMPORT:
        case TOKEN_AS:
        case TOKEN_MATCH:
        case TOKEN_MATCHES:
        case TOKEN_PUB:
            return true;
        default:
            return false;
    }
}

static bool report_reserved_keyword_identifier(ParserContext* ctx, Token token, const char* context) {
    if (token.type == TOKEN_IDENTIFIER) {
        return true;
    }

    const char* context_label = context ? context : "identifier";
    SrcLocation location = {NULL, token.line, token.column};

    if (token.type == TOKEN_ERROR) {
        const char* message = token.start ? token.start : "invalid token";
        report_compile_error(E1006_INVALID_SYNTAX, location,
                             "expected identifier for %s, but %s",
                             context_label,
                             message);
        return false;
    }

    char* token_text = NULL;
    if (token.start && token.length > 0) {
        token_text = copy_token_text(ctx, token);
    }

    if (is_reserved_keyword_token(token.type)) {
        report_compile_error(E1006_INVALID_SYNTAX, location,
                             "expected identifier for %s, but '%s' is a reserved keyword",
                             context_label,
                             token_text ? token_text : token_type_to_string(token.type));
    } else {
        report_compile_error(E1006_INVALID_SYNTAX, location,
                             "expected identifier for %s, but found '%s'",
                             context_label,
                             token_text ? token_text : token_type_to_string(token.type));
    }

    return false;
}

static bool append_token(Token** tokens, int* count, int* capacity, Token token) {
    if (*count >= *capacity) {
        int new_capacity = *capacity == 0 ? 4 : (*capacity * 2);
        Token* resized = realloc(*tokens, sizeof(Token) * (size_t)new_capacity);
        if (!resized) {
            return false;
        }
        *tokens = resized;
        *capacity = new_capacity;
    }
    (*tokens)[(*count)++] = token;
    return true;
}

static bool token_text_equals(const Token* token, const char* text) {
    if (!token || !text) {
        return false;
    }
    if (token->type != TOKEN_IDENTIFIER) {
        return false;
    }
    size_t expected_length = strlen(text);
    return token->length == (int)expected_length &&
           strncmp(token->start, text, expected_length) == 0;
}

static char* parse_qualified_name(ParserContext* ctx, Token firstToken, const char* missingMessage) {
    Token* parts = NULL;
    int partCount = 0;
    int partCapacity = 0;

    if (firstToken.type != TOKEN_IDENTIFIER) {
        SrcLocation location = {NULL, firstToken.line, firstToken.column};
        report_compile_error(E1006_INVALID_SYNTAX, location, missingMessage);
        return NULL;
    }

    if (!append_token(&parts, &partCount, &partCapacity, firstToken)) {
        free(parts);
        return NULL;
    }

    while (peekToken(ctx).type == TOKEN_DOT) {
        nextToken(ctx); // consume '.'
        Token segment = nextToken(ctx);
        if (segment.type != TOKEN_IDENTIFIER) {
            SrcLocation location = {NULL, segment.line, segment.column};
            report_compile_error(E1006_INVALID_SYNTAX, location,
                                 "expected identifier after '.' in module name");
            free(parts);
            return NULL;
        }
        if (!append_token(&parts, &partCount, &partCapacity, segment)) {
            free(parts);
            return NULL;
        }
    }

    size_t totalLength = 0;
    for (int i = 0; i < partCount; i++) {
        totalLength += (size_t)parts[i].length;
        if (i + 1 < partCount) {
            totalLength += 1; // for '.'
        }
    }

    char* result = parser_arena_alloc(ctx, totalLength + 1);
    if (!result) {
        free(parts);
        return NULL;
    }

    char* writePtr = result;
    for (int i = 0; i < partCount; i++) {
        memcpy(writePtr, parts[i].start, (size_t)parts[i].length);
        writePtr += parts[i].length;
        if (i + 1 < partCount) {
            *writePtr++ = '.';
        }
    }
    *writePtr = '\0';

    free(parts);
    return result;
}

// Parser context lifecycle functions
ParserContext* parser_context_create(void) {
    ParserContext* ctx = malloc(sizeof(ParserContext));
    if (!ctx) return NULL;

    // Initialize arena
    arena_init(&ctx->arena, PARSER_ARENA_SIZE);

    // Initialize state
    ctx->recursion_depth = 0;
    ctx->loop_depth = 0;
    ctx->block_depth = 0;
    ctx->has_peeked_token = false;
    ctx->has_peeked_token2 = false;
    ctx->max_recursion_depth = MAX_RECURSION_DEPTH;

    return ctx;
}

void parser_context_destroy(ParserContext* ctx) {
    if (!ctx) return;
    
    // Free arena blocks
    ArenaBlock* block = ctx->arena.head;
    while (block) {
        ArenaBlock* next = block->next;
        free(block->buffer);
        free(block);
        block = next;
    }
    
    free(ctx);
}

void parser_context_reset(ParserContext* ctx) {
    if (!ctx) return;

    parser_arena_reset(ctx);
    ctx->recursion_depth = 0;
    ctx->loop_depth = 0;
    ctx->block_depth = 0;
    ctx->has_peeked_token = false;
    ctx->has_peeked_token2 = false;
}

// Token lookahead functions now use context

static Token peekToken(ParserContext* ctx) {
    if (!ctx->has_peeked_token) {
        ctx->peeked_token = scan_token();
        ctx->has_peeked_token = true;
    }
    return ctx->peeked_token;
}

static Token peekSecondToken(ParserContext* ctx) {
    if (!ctx->has_peeked_token) {
        ctx->peeked_token = scan_token();
        ctx->has_peeked_token = true;
    }
    if (!ctx->has_peeked_token2) {
        ctx->peeked_token2 = scan_token();
        ctx->has_peeked_token2 = true;
    }
    return ctx->peeked_token2;
}

static Token nextToken(ParserContext* ctx) {
    if (ctx->has_peeked_token) {
        Token result = ctx->peeked_token;
        if (ctx->has_peeked_token2) {
            ctx->peeked_token = ctx->peeked_token2;
            ctx->has_peeked_token2 = false;
        } else {
            ctx->has_peeked_token = false;
        }
        return result;
    }
    return scan_token();
}

static Token consume_indent_token(ParserContext* ctx) {
    while (peekToken(ctx).type == TOKEN_NEWLINE) {
        nextToken(ctx);
    }
    return nextToken(ctx);
}

// Forward declarations - all now take ParserContext*
static ASTNode* parsePrintStatement(ParserContext* ctx);
static ASTNode* parseExpression(ParserContext* ctx);
static ASTNode* parseBinaryExpression(ParserContext* ctx, int minPrec);
static ASTNode* parsePrimaryExpression(ParserContext* ctx);
static ASTNode* parseArrayLiteral(ParserContext* ctx, Token leftToken);

// Control flow parsing functions
static ASTNode* parseIfStatement(ParserContext* ctx);
static ASTNode* parseTryStatement(ParserContext* ctx);
static ASTNode* parseWhileStatement(ParserContext* ctx);
static ASTNode* parseForStatement(ParserContext* ctx);
static ASTNode* parseBreakStatement(ParserContext* ctx);
static ASTNode* parseContinueStatement(ParserContext* ctx);
static ASTNode* parseFunctionDefinition(ParserContext* ctx, bool isPublic);
static ASTNode* parseFunctionExpression(ParserContext* ctx, Token fnToken);
static ASTNode* parseReturnStatement(ParserContext* ctx);
static ASTNode* parseMatchStatement(ParserContext* ctx);
static ASTNode* parseMatchExpression(ParserContext* ctx, Token matchTok);

// Primary expression handlers
static ASTNode* parseNumberLiteral(ParserContext* ctx, Token token);

// Number parsing helper functions
static void preprocessNumberToken(const char* tokenStart, int tokenLength, char* numStr, int* processedLength);
// Suffix detection removed - type inference handles numeric types
static bool isFloatingPointNumber(const char* numStr, int length);
static Value parseNumberValue(const char* numStr, int length);
static bool token_is_numeric_suffix(const Token* token);
static bool tokens_are_adjacent(const Token* first, const Token* second);

static ASTNode* parseStringLiteral(ParserContext* ctx, Token token);
static ASTNode* parseBooleanLiteral(ParserContext* ctx, Token token);
static ASTNode* parseIdentifierExpression(ParserContext* ctx, Token token);
static ASTNode* parseTimeStampExpression(ParserContext* ctx, Token token);
static ASTNode* parseParenthesizedExpressionToken(ParserContext* ctx, Token token);
static ASTNode* parseVariableDeclaration(ParserContext* ctx, bool isMutable, bool isPublic, Token nameToken);
static ASTNode* parseAssignOrVarList(ParserContext* ctx, bool isMutable, bool isPublic, Token nameToken);
static ASTNode* parseImportStatement(ParserContext* ctx);
static ASTNode* parseStatement(ParserContext* ctx);
static ASTNode* parseDestructuringAssignment(ParserContext* ctx, Token firstToken);
static ASTNode* parseInlineBlock(ParserContext* ctx);
static ASTNode* parseIfStatement(ParserContext* ctx);
static ASTNode* parseTryStatement(ParserContext* ctx);
static ASTNode* parseWhileStatement(ParserContext* ctx);
static ASTNode* parseForStatement(ParserContext* ctx);
static ASTNode* parseBreakStatement(ParserContext* ctx);
static ASTNode* parseContinueStatement(ParserContext* ctx);
static ASTNode* parsePassStatement(ParserContext* ctx);
static ASTNode* parseBlock(ParserContext* ctx);
static ASTNode* parseFunctionDefinition(ParserContext* ctx, bool isPublic);
static ASTNode* parseEnumDefinition(ParserContext* ctx, bool isPublic);
static ASTNode* parseStructDefinition(ParserContext* ctx, bool isPublic);
static ASTNode* parseImplBlock(ParserContext* ctx, bool isPublic);
static ASTNode* parseReturnStatement(ParserContext* ctx);
static ASTNode* parseMatchStatement(ParserContext* ctx);
static ASTNode* parseCallExpression(ParserContext* ctx, ASTNode* callee);
static ASTNode* parseIndexExpression(ParserContext* ctx, ASTNode* arrayExpr, Token openToken);
static ASTNode* parsePostfixExpressions(ParserContext* ctx, ASTNode* expr);
static ASTNode* parseFunctionType(ParserContext* ctx);
static ASTNode* parseTypeAnnotation(ParserContext* ctx);
static ASTNode* parseStructLiteral(ParserContext* ctx, ASTNode* typeExpr, Token leftBrace);
static ASTNode* parseMemberAccess(ParserContext* ctx, ASTNode* objectExpr);

static int getOperatorPrecedence(TokenType type) {
    switch (type) {
        case TOKEN_STAR:
        case TOKEN_SLASH:
        case TOKEN_MODULO:
            return PREC_MUL_DIV_MOD;
        case TOKEN_PLUS:
        case TOKEN_MINUS:
            return PREC_ADD_SUB;
        case TOKEN_AS:
            return PREC_CAST;  // Cast operator has higher precedence than comparison
        case TOKEN_EQUAL_EQUAL:
        case TOKEN_BANG_EQUAL:
        case TOKEN_LESS:
        case TOKEN_GREATER:
        case TOKEN_LESS_EQUAL:
        case TOKEN_GREATER_EQUAL:
        case TOKEN_MATCHES:
            return PREC_COMPARISON;
        case TOKEN_AND:
            return PREC_AND;
        case TOKEN_OR:
            return PREC_OR;
        default:
            return PREC_NONE;
    }
}

static const char* getOperatorString(TokenType type) {
    switch (type) {
        case TOKEN_PLUS: return "+";
        case TOKEN_MINUS: return "-";
        case TOKEN_STAR: return "*";
        case TOKEN_SLASH: return "/";
        case TOKEN_MODULO: return "%";
        case TOKEN_EQUAL_EQUAL: return "==";
        case TOKEN_MATCHES: return "==";
        case TOKEN_BANG_EQUAL: return "!=";
        case TOKEN_LESS: return "<";
        case TOKEN_GREATER: return ">";
        case TOKEN_LESS_EQUAL: return "<=";
        case TOKEN_GREATER_EQUAL: return ">=";
        case TOKEN_AND: return "and";
        case TOKEN_OR: return "or";
        default: return "?";
    }
}

// Backward compatibility wrapper
ASTNode* parseSource(const char* source) {
    return parseSourceWithModuleName(source, NULL);
}

ASTNode* parseSourceWithModuleName(const char* source, const char* module_name) {
    static ParserContext* global_ctx = NULL;
    if (!global_ctx) {
        global_ctx = parser_context_create();
    }
    return parseSourceWithContextAndModule(global_ctx, source, module_name);
}

static ASTNode* parseStatement(ParserContext* ctx) {
    Token t = peekToken(ctx);

    if (t.type == TOKEN_PRINT) {
        return parsePrintStatement(ctx);
    }
    if (t.type == TOKEN_PASS) {
        return parsePassStatement(ctx);
    }
    if (t.type == TOKEN_APOSTROPHE) {
        nextToken(ctx);
        Token labelTok = nextToken(ctx);
        if (labelTok.type != TOKEN_IDENTIFIER) return NULL;
        if (nextToken(ctx).type != TOKEN_COLON) return NULL;
        int len = labelTok.length;
        char* label = parser_arena_alloc(ctx, len + 1);
        strncpy(label, labelTok.start, len);
        label[len] = '\0';
        Token after = peekToken(ctx);
        ASTNode* stmt = NULL;
        if (after.type == TOKEN_WHILE) {
            stmt = parseWhileStatement(ctx);
            if (stmt) stmt->whileStmt.label = label;
        } else if (after.type == TOKEN_FOR) {
            stmt = parseForStatement(ctx);
            if (stmt->type == NODE_FOR_RANGE) stmt->forRange.label = label;
            else if (stmt->type == NODE_FOR_ITER) stmt->forIter.label = label;
        } else {
            return NULL;
        }
        return stmt;
    }
    if (t.type == TOKEN_PUB) {
        if (ctx->block_depth > 0) {
            SrcLocation location = {NULL, t.line, t.column};
            report_compile_error(E1006_INVALID_SYNTAX, location,
                                 "'pub' declarations are only allowed at module scope");
            return NULL;
        }

        nextToken(ctx); // consume 'pub'
        Token afterPub = peekToken(ctx);

        if (afterPub.type == TOKEN_STRUCT) {
            return parseStructDefinition(ctx, true);
        } else if (afterPub.type == TOKEN_ENUM) {
            return parseEnumDefinition(ctx, true);
        } else if (afterPub.type == TOKEN_IMPL) {
            return parseImplBlock(ctx, true);
        } else if (afterPub.type == TOKEN_FN) {
            return parseFunctionDefinition(ctx, true);
        }

        bool isMutable = false;
        Token nameTok;
        if (afterPub.type == TOKEN_MUT) {
            nextToken(ctx); // consume 'mut'
            isMutable = true;
            nameTok = nextToken(ctx);
        } else {
            nameTok = nextToken(ctx);
        }

        if (nameTok.type != TOKEN_IDENTIFIER) {
            return NULL;
        }

        Token nextAfterName = peekToken(ctx);
        if (nextAfterName.type == TOKEN_COLON || nextAfterName.type == TOKEN_DEFINE) {
            return parseVariableDeclaration(ctx, isMutable, true, nameTok);
        }
        return parseAssignOrVarList(ctx, isMutable, true, nameTok);
    }
    if (t.type == TOKEN_IMPORT) {
        if (ctx->block_depth > 0) {
            SrcLocation location = {NULL, t.line, t.column};
            report_compile_error(E1006_INVALID_SYNTAX, location,
                                 "'use' declarations are only allowed at module scope");
            return NULL;
        }
        return parseImportStatement(ctx);
    }
    if (t.type == TOKEN_MUT) {
        nextToken(ctx); // consume TOKEN_MUT
        Token nameTok = nextToken(ctx); // get identifier
        if (nameTok.type != TOKEN_IDENTIFIER) return NULL;
        if (peekToken(ctx).type == TOKEN_COLON) {
            return parseVariableDeclaration(ctx, true, false, nameTok);
        }
        return parseAssignOrVarList(ctx, true, false, nameTok);
    }
    if (t.type == TOKEN_STRUCT) {
        return parseStructDefinition(ctx, false);
    }
    if (t.type == TOKEN_ENUM) {
        return parseEnumDefinition(ctx, false);
    }
    if (t.type == TOKEN_IMPL) {
        return parseImplBlock(ctx, false);
    }
    if (t.type == TOKEN_MATCH) {
        return parseMatchStatement(ctx);
    }
    if (t.type == TOKEN_IDENTIFIER) {
        Token second = peekSecondToken(ctx);
        if (second.type == TOKEN_COLON || second.type == TOKEN_DEFINE) {
            nextToken(ctx);
            return parseVariableDeclaration(ctx, false, false, t);
        } else if (second.type == TOKEN_EQUAL) {
            nextToken(ctx);
            return parseAssignOrVarList(ctx, false, false, t);
        } else if (second.type == TOKEN_COMMA) {
            return parseDestructuringAssignment(ctx, t);
        }
    }
    if (t.type == TOKEN_TRY) {
        return parseTryStatement(ctx);
    }
    if (t.type == TOKEN_IF) {
        return parseIfStatement(ctx);
    } else if (t.type == TOKEN_WHILE) {
        return parseWhileStatement(ctx);
    } else if (t.type == TOKEN_FOR) {
        return parseForStatement(ctx);
    } else if (t.type == TOKEN_BREAK) {
        return parseBreakStatement(ctx);
    } else if (t.type == TOKEN_CONTINUE) {
        return parseContinueStatement(ctx);
    } else if (t.type == TOKEN_FN) {
        return parseFunctionDefinition(ctx, false);
    } else if (t.type == TOKEN_RETURN) {
        return parseReturnStatement(ctx);
    } else {
        return parseExpression(ctx);
    }
}

typedef struct {
    bool isWildcard;
    bool isEnumCase;
    char* enumTypeName;
    char* variantName;
    char** payloadNames;
    int payloadCount;
    ASTNode* valuePattern;
    ASTNode* body;
    SrcLocation location;
} MatchCaseInfo;

static void addMatchCase(ParserContext* ctx, MatchCaseInfo** list, int* count, int* capacity, MatchCaseInfo info) {
    if (*count + 1 > *capacity) {
        int newCap = *capacity == 0 ? 4 : (*capacity * 2);
        MatchCaseInfo* newArr = parser_arena_alloc(ctx, sizeof(MatchCaseInfo) * newCap);
        if (*capacity > 0) {
            memcpy(newArr, *list, sizeof(MatchCaseInfo) * (*count));
        }
        *list = newArr;
        *capacity = newCap;
    }
    (*list)[(*count)++] = info;
}

static bool parser_literal_is_numeric(Value value) {
    switch (value.type) {
        case VAL_I32:
        case VAL_I64:
        case VAL_U32:
        case VAL_U64:
        case VAL_F64:
        case VAL_NUMBER:
            return true;
        default:
            return false;
    }
}

static long double parser_literal_to_long_double(Value value) {
    switch (value.type) {
        case VAL_I32:
            return (long double)AS_I32(value);
        case VAL_I64:
            return (long double)AS_I64(value);
        case VAL_U32:
            return (long double)AS_U32(value);
        case VAL_U64:
            return (long double)AS_U64(value);
        case VAL_F64:
            return (long double)AS_F64(value);
        case VAL_NUMBER:
            return (long double)value.as.number;
        default:
            return 0.0L;
    }
}

static bool parser_match_literals_equal(Value a, Value b) {
    if (a.type == b.type) {
        switch (a.type) {
            case VAL_BOOL:
                return AS_BOOL(a) == AS_BOOL(b);
            case VAL_I32:
                return AS_I32(a) == AS_I32(b);
            case VAL_I64:
                return AS_I64(a) == AS_I64(b);
            case VAL_U32:
                return AS_U32(a) == AS_U32(b);
            case VAL_U64:
                return AS_U64(a) == AS_U64(b);
            case VAL_F64:
                return AS_F64(a) == AS_F64(b);
            case VAL_NUMBER:
                return a.as.number == b.as.number;
            case VAL_STRING: {
                ObjString* left = AS_STRING(a);
                ObjString* right = AS_STRING(b);
                if (!left || !right || !left->chars || !right->chars) {
                    return left == right;
                }
                return strcmp(left->chars, right->chars) == 0;
            }
            default:
                return false;
        }
    }

    if (parser_literal_is_numeric(a) && parser_literal_is_numeric(b)) {
        return parser_literal_to_long_double(a) == parser_literal_to_long_double(b);
    }

    return false;
}

static void parser_format_match_literal(Value value, char* buffer, size_t size) {
    if (!buffer || size == 0) {
        return;
    }
